--- a/package.json
+++ b/package.json
@@ -3,18 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "flexlayout-react": "^0.7.3",
+    "formik": "^2.2.9",
+    "grommet": "^2.23.0",
+    "grommet-icons": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "6.2.1",
-    "styled-components": "5.3.3",
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
+    "i18next-browser-languagedetector": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server --watch db.json --port 3002",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
